Feat:포인트, 패널티 내역 리스트 전체수 반환